<resources>
    <!--  XML strings  -->
    <string name="app_name">Game Backlog</string>
    <string name="app_menu_name">Add Game</string>
    <string name="etTitleString">Title</string>
    <string name="et_platform_string">Platform: </string>
    <string name="et_month_string">Month</string>
    <string name="et_day_string">Day</string>
    <string name="et_year_string">Year</string>

    <!--    Toast messages  -->
    <string name="wrong_title">Please fill in a title</string>
    <string name="wrong_date">Please fill in a valid date</string>

    <!--  Adapter  -->
    <string name="release_string">Release: %s</string>

<!--  Delete games  -->
    <string name="delete_game">Successfully deleted %s</string>
</resources>
